Integrated login setup RT 96075

--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -21,6 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript" src="/screens/856links.js"></script>
 <script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
+
 <script type="text/javascript">
 $(document).ready(function () {
 	document.title = "Kent Library Catalog"
@@ -134,6 +135,9 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/search/q">Author and Title</a></li>
 <li><a href="/search~S3/ftlist">New Books</a></li>
 </ul>
+
+<script src="https://v2.libanswers.com/load_chat.php?hash=3f40b53d04f38b21245a96d8599c1a2e"></script>
+<div id="libchat_3f40b53d04f38b21245a96d8599c1a2e" class="libchat"></div>
         
 </div>
 <div class="pageContentColumn"><!-- content container -->
