--- a/toplogo_s2.html
+++ b/toplogo_s2.html
@@ -20,6 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript" src="/screens/856links.js"></script>
 <script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
+<script type="text/javascript" src="/screens/tabs_X.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
@@ -103,6 +104,9 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/search/m">Children's Subject</a></li>
 <li><a href="/search/q">Author and Title</a></li>
 </ul>
+
+<script src="https://v2.libanswers.com/load_chat.php?hash=3f40b53d04f38b21245a96d8599c1a2e"></script>
+<div id="libchat_3f40b53d04f38b21245a96d8599c1a2e" class="libchat"></div>
         
 </div>
 <div class="pageContentColumn"><!-- content container -->
